RESOLVED FIXED221775
Web Inspector: "Show Extended Gridlines" option for grid overlay does not work
https://bugs.webkit.org/show_bug.cgi?id=221775
Summary Web Inspector: "Show Extended Gridlines" option for grid overlay does not work
Patrick Angle
Reported 2021-02-11 13:31:51 PST
`OverlayManager.js:65` should set the `showExtendedGridlines` option, not `showExtendedGridLines` (different casing).
Attachments
Patch (6.68 KB, patch)
2021-02-11 15:11 PST, Nikita Vasilyev
no flags
Patch (6.91 KB, patch)
2021-02-11 15:54 PST, Nikita Vasilyev
no flags
Nikita Vasilyev
Comment 1 2021-02-11 15:11:53 PST
Devin Rousso
Comment 2 2021-02-11 15:15:18 PST
Comment on attachment 420049 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=420049&action=review > Source/WebInspectorUI/ChangeLog:9 > + Replace all instances of "GridLines" (camelcase) with "Gridlines" > + to match the protocol naming. I feel like this should actually be the opposite. I think "GridLines" is more accurate here because you're drawing "lines for CSS grid contexts". Not to mention it would likely be a smaller/simpler patch :P Also, this shouldn't be problematic to update the protocol with a new name since we haven't included any of the grid related types/commands/events in any legacy protocols yet.
Nikita Vasilyev
Comment 3 2021-02-11 15:54:17 PST
EWS Watchlist
Comment 4 2021-02-11 15:55:08 PST
This patch modifies the inspector protocol. Please ensure that any frontend changes appropriately use feature checks for new protocol features.
Devin Rousso
Comment 5 2021-02-11 16:18:53 PST
Comment on attachment 420058 [details] Patch r=me
EWS
Comment 6 2021-02-11 18:56:57 PST
Committed r272768: <https://commits.webkit.org/r272768> All reviewed patches have been landed. Closing bug and clearing flags on attachment 420058 [details].
Radar WebKit Bug Importer
Comment 7 2021-02-11 18:57:15 PST
Note You need to log in before you can comment on or make changes to this bug.