Web Inspector: "Show Extended Gridlines" option for grid overlay does not work https://bugs.webkit.org/show_bug.cgi?id=221775

Reviewed by Devin Rousso.

Replace all mentions of "Gridlines" with "GridLines" (camelcase).

Source/JavaScriptCore:

* inspector/protocol/DOM.json:

Source/WebCore:

* inspector/InspectorOverlay.h:
* inspector/agents/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::showGridOverlay):
* inspector/agents/InspectorDOMAgent.h:


Canonical link: https://commits.webkit.org/234006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272768 268f45cc-cd09-0410-ab3c-d52691b4dbfc